--- a/kubernetes/apps/observability/silence-operator/silences/silence.yaml
+++ b/kubernetes/apps/observability/silence-operator/silences/silence.yaml
@@ -75,3 +75,15 @@ spec:
   matchers:
     - name: alertname
       value: KubePdbNotEnoughHealthyPods
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/observability.giantswarm.io/silence_v1alpha2.json
+apiVersion: observability.giantswarm.io/v1alpha2
+kind: Silence
+metadata:
+  # TODO: Remove once Ceph replicas have been increased.
+  name: ceph-pg-imbalance
+  namespace: observability
+spec:
+  matchers:
+    - name: alertname
+      value: CephPGImbalance
