--- a/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -111,7 +111,7 @@ spec:
               allowPrivilegeEscalation: false
               capabilities: {add: ["NET_ADMIN"]}
           vuetorrent:
-            dependsOn: app
+            dependsOn: gluetun
             image:
               repository: registry.k8s.io/git-sync/git-sync
               tag: v4.5.0
