feat(taskfile): add volsync tasks

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -21,6 +21,7 @@ includes:
   flux: .taskfiles/flux
   sops: .taskfiles/sops
   talos: .taskfiles/talos
+  volsync: .taskfiles/volsync
   workstation: .taskfiles/workstation
 
 tasks:
