--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -89,6 +89,8 @@ spec:
         path: /mnt/hdd-media/Media
         globalMounts:
           - path: /data
+      tmp:
+        type: emptyDir
     route:
       app:
         hostnames:
