chore(qbit): use advancedMounts for addons dir

--- a/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -133,8 +133,14 @@ spec:
     persistence:
       addons:
         type: emptyDir
-        globalMounts:
-          - path: /addons
+        advancedMounts:
+          qbittorrent:
+            app:
+              - path: /addons
+                subPath: addons
+            vuetorrent:
+              - path: /addons
+                subPath: addons
       config:
         existingClaim: "{{ .Release.Name }}"
       media:
