--- a/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
                 memory: 2Gi
               limits:
                 memory: 6Gi
-            securityContext:
+            securityContext: &securityContext
               runAsNonRoot: true
               runAsUser: 1000
               runAsGroup: 1000
@@ -126,6 +126,7 @@ spec:
                 memory: 32Mi
               limits:
                 memory: 64Mi
+            securityContext: *securityContext
     defaultPodOptions:
       securityContext:
         fsGroup: 1000
